File Organization / ICommand Abstraction

--- a/UnitySolution/Assets/Scripts/Core/Core.asmdef
+++ b/UnitySolution/Assets/Scripts/Core/Core.asmdef
@@ -1,8 +1,7 @@
 {
-    "name": "TapCount",
+    "name": "Core",
     "references": [
-        "UniRx",
-        "Unity.TextMeshPro"
+        "TapCount"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
