--- a/UnitySolution/Assets/Scripts/Core/TapCount/TapCount.asmdef
+++ b/UnitySolution/Assets/Scripts/Core/TapCount/TapCount.asmdef
@@ -1,7 +1,9 @@
 {
-    "name": "Scripts",
+    "name": "TapCount",
     "references": [
-        "TapCount"
+        "UniRx",
+        "Unity.TextMeshPro",
+        "Command"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
